essais de fixtures

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/security-csrf": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "webonaute/doctrine-fixtures-generator-bundle": "dev-master"
     },
     "config": {
         "preferred-install": {
@@ -63,6 +64,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "symfony/asset": "4.2.*",
         "symfony/maker-bundle": "^1.10",
         "symfony/orm-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
